<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/log_in"
                android:textColor="@android:color/white"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="20sp"
                android:padding="25dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:background="@drawable/textfield_background"
                android:padding="20dp"

                android:inputType="textPersonName"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:background="@drawable/textfield_background"
                android:padding="20dp"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/textfield_background"
                android:padding="10dp"
                android:text="@string/log_in"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:textColor="@android:color/white"
                android:text="@string/forgot_password" />

            <TextView
                android:id="@+id/signup_regis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/don_t_have_an_account"
                android:textColor="@android:color/white"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>